// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ETH service connected to ganache v0 should send CID to local ganache server 1`] = `
Transaction {
  "blockNumber": 3,
  "blockTimestamp": 2020-04-13T13:20:08.000Z,
  "chain": "eip155:1337",
  "txHash": "0xd6e8a8fab6097270c8a52a85db47ef8c2ba1b9b60db76435f5d8a8a3a1d598be",
}
`;

exports[`ETH service with mock wallet build transaction request 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet insufficient funds error 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10000n,
  "maxFeePerGas": 2431n,
  "maxPriorityFeePerGas": 1210n,
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet insufficient funds error 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10000n,
  "maxFeePerGas": 2431n,
  "maxPriorityFeePerGas": 1210n,
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet single transaction attempt 1`] = `
{
  "chainId": "1337",
  "confirmations": 3,
  "from": "me",
  "hash": "0x12345abcde",
}
`;

exports[`ETH service with mock wallet single transaction attempt 2`] = `
Transaction {
  "blockNumber": 54321,
  "blockTimestamp": 2000-02-01T00:00:00.000Z,
  "chain": "eip155:1337",
  "txHash": "0x12345abcde",
}
`;

exports[`ETH service with mock wallet single transaction attempt 3`] = `
{
  "data": "0x987654321",
  "gasLimit": 10000n,
  "gasPrice": 1000n,
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`ETH service with mock wallet successful mocked transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10000n,
  "maxFeePerGas": 2310n,
  "maxPriorityFeePerGas": 1100n,
  "nonce": 5,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "maxFeePerGas": 2310n,
  "maxPriorityFeePerGas": 1100n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "maxFeePerGas": 2431n,
  "maxPriorityFeePerGas": 1210n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice EIP1559 transaction 3`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "maxFeePerGas": 2564n,
  "maxPriorityFeePerGas": 1331n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 1`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "gasPrice": 1100n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 2`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "gasPrice": 1210n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;

exports[`setGasPrice legacy transaction 3`] = `
{
  "data": "0x0f017112205d7fcd1a0999befdb062e6762c1f0f902f729b98304a2ef539412f53360d3d6a",
  "from": "abcd1234",
  "gasLimit": 10n,
  "gasPrice": 1331n,
  "nonce": undefined,
  "to": "abcd1234",
}
`;
